--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -53,17 +53,25 @@ h6 {
 
 nav {
   width: 100%;
+  height: 10vh;
+  position: fixed;
+  top: 0px;
+  z-index: 2;
+}
+
+.nav {
+  width: 100%;
   height: auto;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0px 100px;
-  position: fixed;
+  position: absolute;
   top: -80px;
-  z-index: 2;
   transition: top 0.3s;
   border: var(--border);
+  z-index: 2;
 }
 
 .logo {
@@ -102,11 +110,12 @@ nav {
 }
 
 @media screen and (max-width: 1100px) {
-  nav {
+  .nav {
     padding: 0px;
     flex-direction: column;
     height: 0;
     border: none;
+    top: 0;
   }
 
   .nav-header {
@@ -415,7 +424,7 @@ nav {
   font-weight: 600;
 }
 
-.bottom a {
+.btn {
   text-transform: capitalize;
   text-decoration: none;
   background: #fff;
@@ -543,6 +552,103 @@ nav {
     font-size: 0.95em;
   }
 }
+.flip-card {
+  position: relative;
+  display: inline-flex;
+  flex-direction: column;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.1em;
+}
+
+.top,
+.bottom,
+.flip-card .top-flip,
+.flip-card .bottom-flip {
+  height: 0.75em;
+  line-height: 1;
+  padding: 0.25em;
+  overflow: hidden;
+}
+
+.top,
+.flip-card .top-flip {
+  background-color: #f7f7f7;
+  border-top-right-radius: 0.1em;
+  border-top-left-radius: 0.1em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.bottom,
+.flip-card .bottom-flip {
+  background-color: white;
+  display: flex;
+  align-items: flex-end;
+  border-bottom-right-radius: 0.1em;
+  border-bottom-left-radius: 0.1em;
+}
+
+.flip-card .top-flip {
+  position: absolute;
+  width: 100%;
+  -webkit-animation: flip-top 250ms ease-in;
+          animation: flip-top 250ms ease-in;
+  transform-origin: bottom;
+}
+
+@-webkit-keyframes flip-top {
+  100% {
+    transform: rotateX(90deg);
+  }
+}
+
+@keyframes flip-top {
+  100% {
+    transform: rotateX(90deg);
+  }
+}
+.flip-card .bottom-flip {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  -webkit-animation: flip-bottom 250ms ease-out 250ms;
+          animation: flip-bottom 250ms ease-out 250ms;
+  transform-origin: top;
+  transform: rotateX(90deg);
+}
+
+@-webkit-keyframes flip-bottom {
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+
+@keyframes flip-bottom {
+  100% {
+    transform: rotateX(0deg);
+  }
+}
+.container {
+  display: flex;
+  gap: 0.5em;
+  justify-content: center;
+}
+
+.container-segment {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1em;
+  align-items: center;
+}
+
+.segment {
+  display: flex;
+  gap: 0.1em;
+}
+
+.segment-title {
+  font-size: 1rem;
+}
+
 :root {
   --background-color: #f7f7f7;
   --font-blk: #292f36;
@@ -608,16 +714,38 @@ section:nth-of-type(5) {
   height: auto;
 }
 
-.hero-img {
-  width: 350px;
-  height: 350px;
-  -o-object-fit: contain;
-     object-fit: contain;
+.home-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1;
+}
+
+.counter-wrapper {
+  height: auto;
+  width: 100%;
+  margin-top: 7.5%;
+  text-align: center;
+}
+.counter-wrapper h2 {
+  font-size: 3.2em;
+}
+.counter-wrapper h2 span {
+  background-color: #f3ec78;
+  background-image: linear-gradient(90deg, rgb(243, 30, 233) 0%, rgb(138, 2, 253) 30%, rgb(80, 3, 255) 60%, rgb(16, 123, 255) 90%, rgb(7, 239, 255) 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+
+.hero-img {
+  width: 100%;
+  height: 350px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .incentives-wrapper {
@@ -653,6 +781,7 @@ section:nth-of-type(5) {
 .cards-details p {
   color: rgba(41, 47, 54, 0.5);
   font-size: 0.9em;
+  text-align: justify;
 }
 
 footer {
@@ -695,6 +824,9 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   margin-bottom: 10px;
+}
+.social-media i {
+  font-size: 18px;
 }
 
 .contact-wrapper {
