--- a/projectpillar/src/css/_navbar.scss
+++ b/projectpillar/src/css/_navbar.scss
@@ -1,16 +1,25 @@
 nav {
   width: 100%;
+  height: 10vh;
+  position: fixed;
+  top: 0px;
+  z-index: 2;
+
+}
+
+.nav {
+  width: 100%;
   height: auto;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0px 100px;
-  position: fixed;
+  position: absolute;
   top: -80px;
-  z-index: 2;
   transition: top 0.3s;
   border: var(--border);
+  z-index: 2;
 }
 
 .logo {
@@ -46,11 +55,12 @@ nav {
 }
 
 @media screen and (max-width: 1100px) {
-  nav {
+  .nav {
     padding: 0px;
     flex-direction: column;
     height: 0;
     border: none;
+    top: 0;
   }
   .nav-header {
     padding: 5px 32px;
