foodfiesta and events nav fix and footer of  events page css cleaned

--- a/events/css/_reset.scss
+++ b/events/css/_reset.scss
@@ -20,7 +20,7 @@ a {
 }
 
 body {
-  background-color: var(--background-color);
+  background-color:  #f1f1f1;
   font-family: "Poppins", sans-serif;
 }
 
