--- a/common/css/_reset.scss
+++ b/common/css/_reset.scss
@@ -20,7 +20,7 @@ a {
 }
 
 body {
-  background-color: var(--background-color);
+  background-color:  #f1f1f1;
   font-family: "Poppins", sans-serif;
 }
 
@@ -39,13 +39,4 @@ body {
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: #b3b2b2;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 600;
 }
