--- a/events/css/style.scss
+++ b/events/css/style.scss
@@ -1,6 +1,6 @@
-/*PEN STYLES*/
-@import "./reset";
-
+@import "../../common/css/reset";
+@import "../../common/css/nav";
+@import "../../common/css/footer";
 
 $color_white: #fff;
 $color_prime: #5ad67d;
@@ -126,19 +126,6 @@ $color_grey_dark: #a2a2a2;
         color: $color_prime;
         display: inline-block;
         position: relative;
-        &:after {
-          content: "\f061";
-          font-family: FontAwesome;
-          margin-left: -10px;
-          opacity: 0;
-          vertical-align: middle;
-          transition: margin .3s, opacity .3s;
-        }
-
-        &:hover:after {
-          margin-left: 5px;
-          opacity: 1;
-        }
       }
     }
   }
@@ -199,235 +186,6 @@ $color_grey_dark: #a2a2a2;
       .details {
         padding-left: 25px;
       }
-    }
-  }
-}
-
-// NARBAR CSS STARTS
-nav {
-	position: sticky;
-	z-index: 10;
-	left: 0;
-	right: 0;
-	top: 0;
-	padding: 0 5%;
-	height: 70px;
-	background-color: rgb(255, 255, 255);
-}
-nav .logo {
-	float: left;
-	width: 75px;
-	display: flex;
-	align-items: center;
-}
-nav .links {
-	float: right;
-	padding: 0;
-	margin: 0;
-	height: 100%;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-nav .links li {
-	list-style: none;
-}
-nav .links a {
-	display: block;
-	padding: 1em;
-	font-size: 16px;
-	font-weight: bold;
-	color: rgb(88, 81, 81);
-	text-decoration: none;
-}
-
-nav .links a:hover {
-  opacity: 0.7;
-}
-
-
-#nav-toggle {
-	position: absolute;
-	top: -100px;
-}
-nav .icon-burger {
-	display: none;
-	position: absolute;
-	right: 5%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-nav .icon-burger .line {
-	width: 30px;
-	height: 5px;
-	background-color: rgb(59, 59, 59);
-	margin: 5px;
-	border-radius: 3px;
-	transition: all .3s ease-in-out;
-}
-@media screen and (max-width: 900px) {
-	nav .links {
-		float: none;
-		position: fixed;
-		z-index: 9;
-		left: 0;
-		right: 0;
-		top: 70px;
-		bottom: 100%;
-		width: auto;
-		height: auto;
-		flex-direction: column;
-		justify-content: space-evenly;
-		background-color: rgba(32, 32, 32, 0.962);
-		overflow: hidden;
-		box-sizing: border-box;
-		transition: all .5s ease-in-out;
-	}
-	nav .links a {
-		font-size: 20px;
-    color: rgb(212, 212, 212);
-	}
-	nav :checked ~ .links {
-		bottom: 0;
-	}
-	nav .icon-burger {
-		display: block;
-	}
-	nav :checked ~ .icon-burger .line:nth-child(1) {
-		transform: translateY(10px) rotate(225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(3) {
-		transform: translateY(-10px) rotate(-225deg);
-	}
-	nav :checked ~ .icon-burger .line:nth-child(2) {
-		opacity: 0;
-	}
-	
-}
-// NAVBAR CSS ENDS
-
-
-
-footer {
-  // width: 100%;
-  height: auto;
-  background-color: #292f36;
-}
-
-.footer-wrapper {
-  padding: 25px 100px;
-  background: rgb(255, 255, 255);
-  h1 {
-    font-size: 2.5rem;
-    text-align: center;
-  }
-}
-
-.footer-ecell {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  a {
-    color: rgb(127, 192, 187);
-    font-size: 16px;
-  }
-}
-
-.social-media {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-bottom: 10px;
-  gap: 50px;
-}
-
-.contact-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 20px 60px;
-  flex-wrap: wrap;
-}
-
-.contact-card {
-  display: flex;
-  flex-direction: column;
-  width: 320px;
-  h4 {
-    color: rgb(67, 105, 113);
-    font-size: 16px;
-    text-align: left;
-  }
-}
-
-.phone-area,
-.email-area {
-  display: flex;
-  flex-direction: row;
-  gap: 0 1em;
-}
-
-
-.footer-ecell {
-  text-align: center;
-  text-transform: capitalize;
-  color: rgb(127, 192, 187);
-  padding: 20px 16px;
-  h5 {
-    font-weight: 500;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  h1 {
-    font-size: 2.5rem;
-    color: var(--font-blk);
-  }
-
-  .footer-wrapper {
-    h1 {
-      color: var(--font-blk);
-      font-size: 2rem;
-    }
-  }
-  .contact-wrapper{
-    justify-content: center;
-  }
-
-}
-
-
-@media screen and (max-width: 550px) {
-  h1 {
-    font-size: 2.5rem;
-    color: var(--font-blk);
-  }
-
-  .footer-wrapper {
-    padding: 25px 10px;
-    h1 {
-      color: var(--font-blk);
-      font-size: 1.5rem;
-    }
-  }
-  .contact-wrapper{
-    justify-content: center;
-  }
-
-  .contact-card {
-    h4 {
-      font-size: 14px;
-    }
-  }
-  .footer-ecell{
-    h5{
-      font-weight: 400;
-      font-size: 12px;
-
     }
   }
 }
