--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -10,7 +10,6 @@
 }
 
 .contact-info {
-    margin-top: -24%;
     width: 100%;
     height: auto;
     display: grid;
@@ -21,7 +20,6 @@
 .contact-in {
     /* width: 80%; */
     height: auto;
-    margin-top: -2%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2%;
@@ -171,7 +169,8 @@ form ::placeholder {
 
 @media screen and (max-width: 350px) {
     .contact-in {
-        padding: 0;
+        padding: 20px 0px;
+        border-radius: 2px;
     }
 
     .form-input {
