--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600");
 *,
 ::after,
 ::before {
@@ -12,12 +11,16 @@ html {
   scroll-behavior: smooth;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
 }
 
 body {
-  background-color: #fafafa;
+  background-color: #f1f1f1;
   font-family: "Poppins", sans-serif;
 }
 
@@ -39,727 +42,302 @@ body {
   background-color: #b3b2b2;
 }
 
-.mouse_scroll {
-  display: block;
-  margin: 0 auto;
-  width: 24px;
-  height: 100px;
-  margin-top: 125px;
-}
-
-.m_scroll_arrows {
-  display: block;
-  width: 5px;
-  height: 5px;
-  /* IE 9 */
-  /* Chrome, Safari, Opera */
-  transform: rotate(45deg);
-  border-right: 2px solid rgb(0, 0, 0);
-  border-bottom: 2px solid rgb(0, 0, 0);
-  margin: 0 0 3px 4px;
-  width: 16px;
-  height: 16px;
-}
-
-.unu {
-  margin-top: 1px;
-}
-
-.unu,
-.doi,
-.trei {
-  -webkit-animation: mouse-scroll 1s infinite;
-  animation: mouse-scroll 1s infinite;
-}
-
-.unu {
-  -webkit-animation-delay: 0.1s;
-  -moz-animation-delay: 0.1s;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-  -webkit-animation-delay: alternate;
-          animation-delay: alternate;
-}
-
-.doi {
-  -webkit-animation-delay: 0.2s;
-  -moz-animation-delay: 0.2s;
-  -webkit-animation-direction: alternate;
-  animation-delay: 0.2s;
-  animation-direction: alternate;
-  margin-top: -6px;
-}
-
-.trei {
-  -webkit-animation-delay: 0.3s;
-  -moz-animation-delay: 0.3s;
-  -webkit-animation-direction: alternate;
-  animation-delay: 0.3s;
-  animation-direction: alternate;
-  margin-top: -6px;
-}
-
-.mouse {
-  height: 42px;
-  width: 24px;
-  border-radius: 14px;
-  transform: none;
-  border: 2px solid #000;
-  top: 170px;
-}
-
-.wheel {
-  height: 5px;
-  width: 2px;
-  display: block;
-  margin: 5px auto;
-  background: #000;
-  position: relative;
-  height: 4px;
-  width: 4px;
-  border: 2px solid #000;
-  border-radius: 8px;
-}
-
-.wheel {
-  -webkit-animation: mouse-wheel 0.6s linear infinite;
-  animation: mouse-wheel 0.6s linear infinite;
-}
-
-@-webkit-keyframes mouse-wheel {
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(6px);
-  }
-}
-@keyframes mouse-wheel {
-  0% {
-    top: 1px;
-  }
-  25% {
-    top: 2px;
-  }
-  50% {
-    top: 3px;
-  }
-  75% {
-    top: 2px;
-  }
-  100% {
-    top: 1px;
-  }
-}
-@-webkit-keyframes mouse-scroll {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes mouse-scroll {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 nav {
-  background-color: #fff;
-  width: 100%;
-  height: 80px;
-  padding: 0.5rem 7rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 10;
+  left: 0;
+  right: 0;
   top: 0;
-  z-index: 25;
-  transition: top 0.3s;
-  border-bottom: var(--border);
-  flex-wrap: nowrap;
-}
-@media screen and (max-width: 1100px) {
-  nav {
-    height: 75px;
-    width: 100%;
-    padding: 0;
-    flex-direction: column;
-    align-items: flex-start;
-  }
+  padding: 0 5%;
+  height: 70px;
+  background-color: rgb(255, 255, 255);
 }
 
-ul {
-  list-style: none;
-  position: relative;
+nav .logo {
+  float: left;
+  width: 75px;
   display: flex;
-  flex-direction: row;
-  gap: 0 3em;
-}
-ul li {
-  text-align: center;
-}
-ul li a {
-  text-decoration: none;
-  color: var(--font-blk);
-  font-weight: 500;
-  font-size: 1.05em;
-}
-@media screen and (max-width: 1100px) {
-  ul {
-    flex-direction: column;
-    gap: 2em 0;
-    padding: 1em 0;
-    width: 100%;
-    background-color: #fff;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  #nav-links {
-    width: 100%;
-    transition: var(--transition-nav);
-  }
-
-  .nav-links-active {
-    width: 100%;
-    visibility: visible;
-    position: relative;
-    top: 0;
-    z-index: 1;
-  }
-
-  .nav-links-disable {
-    visibility: hidden;
-    position: relative;
-    top: -350px;
-    z-index: 1;
-  }
-}
-.logo {
-  height: 50px;
-  width: 50px;
-}
-@media screen and (max-width: 1100px) {
-  .logo {
-    margin-top: 2px;
-    height: 65px;
-    width: 65px;
-  }
-}
-
-.nav-header {
-  display: flex;
-  flex-wrap: nowrap;
   align-items: center;
-  justify-content: space-between;
-  z-index: 3;
-}
-@media screen and (max-width: 1100px) {
-  .nav-header {
-    width: 100%;
-    padding: 0rem 1.5rem;
-    background-color: #fff;
-  }
 }
 
-.nav-toggle {
-  height: 25px;
-  width: 30px;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: flex-end;
-  display: none;
-  cursor: pointer;
-}
-.nav-toggle span {
+nav .links {
+  float: right;
   padding: 0;
   margin: 0;
-  height: 3px;
-  width: 100%;
-  background-color: #00001a;
-  border-radius: 1rem;
-  transition: var(--transition-nav);
-}
-.nav-toggle span:nth-of-type(1) {
-  width: 50%;
-}
-.nav-toggle span:nth-of-type(3) {
-  width: 75%;
-}
-@media screen and (max-width: 1100px) {
-  .nav-toggle {
-    display: flex;
-  }
-}
-
-.toggle-active span:nth-of-type(1) {
-  transform: rotateZ(-45deg) translate(-6.5px, 3.2px);
-  transform-origin: top;
-}
-.toggle-active span:nth-of-type(2) {
-  transform-origin: bottom;
-  transform: rotateZ(45deg);
-}
-.toggle-active span:nth-of-type(3) {
-  width: 50%;
-  transform-origin: top;
-  transform: rotateZ(-45deg) translate(-5.7px, -12.5px);
-}
-
-:root {
-  --background-color: #f7f7f7;
-  --font-white: #fff;
-  --font-blk: #292f36;
-  --transition-nav: 300ms linear;
-  --border: #dadce0 solid 1px;
-  --about-bg: #ff7a7a;
-  --timeline-bg: #fff0a7;
-  --registrtation-bg: #d3f5f9;
-  --footer-bg: #e7fae7;
-  --sponsors-bg: #f7fff7;
-  --box-shadow: 1.5px 3.4px 3.6px -46px rgba(0, 0, 0, 0.01),
-    4.1px 9.3px 9.9px -46px rgba(0, 0, 0, 0.026),
-    9.9px 22.3px 23.8px -46px rgba(0, 0, 0, 0.049),
-    33px 74px 79px -46px rgba(0, 0, 0, 0.08);
-}
-
-.section-wrapper {
-  position: relative;
-  width: 100%;
-  padding: 3% 10em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.section-wrapper:nth-of-type(1) {
-  padding: 0px 0em;
-}
-.section-wrapper:nth-of-type(3) {
-  position: relative;
-  background-color: #f8fafd;
-  justify-content: space-between;
-  gap: 40px;
-}
-.section-wrapper:nth-of-type(3) h3 {
-  font-size: 2.5em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-@media screen and (max-width: 900px) {
-  .section-wrapper:nth-of-type(3) {
-    padding: 50px 15px;
-    justify-content: flex-start;
-    gap: 1em 0;
-  }
-}
-
-.section-wrapper:nth-of-type(5) {
-  position: relative;
-  justify-content: space-evenly;
-  gap: 0;
-}
-.section-wrapper:nth-of-type(5) h3 {
-  font-size: 2.5em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-@media screen and (max-width: 900px) {
-  .section-wrapper:nth-of-type(5) {
-    padding: 75px 1em;
-  }
-  .section-wrapper:nth-of-type(5) h3 {
-    font-size: 2em;
-  }
-}
-
-.wrapper-flex {
-  padding: 5% 15em;
-}
-.wrapper-flex:nth-of-type(2) {
-  background-color: #eefafc;
-  padding: 5% 15em;
-}
-.wrapper-flex:nth-of-type(2) h3 {
-  color: var(--font-blk);
-}
-@media screen and (max-width: 900px) {
-  .wrapper-flex:nth-of-type(2) {
-    padding: 75px 1em;
-  }
-}
-.wrapper-flex:nth-of-type(4) {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  gap: 40px;
-}
-.wrapper-flex:nth-of-type(4) h3 {
-  font-size: 3em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-.wrapper-flex:nth-of-type(6) {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  gap: 40px;
-}
-.wrapper-flex:nth-of-type(6) h3 {
-  font-size: 3em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-
-.project-pillar {
-  font-size: 4em;
-  font-weight: 600;
-  text-transform: uppercase;
-  color: var(--font-blk);
-  text-align: center;
-}
-
-.content-wrapper {
-  width: 100%;
-  text-align: center;
   height: 100%;
-}
-.content-wrapper h3 {
-  font-size: 3em;
-  font-weight: 600;
-  color: var(--font-white);
-}
-.content-wrapper p {
-  font-size: 1.25em;
-  line-height: 2;
-  text-align: center;
-}
-@media screen and (max-width: 900px) {
-  .content-wrapper {
-    padding: 0.5em 0;
-  }
-  .content-wrapper h3 {
-    font-size: 2.5em;
-  }
-  .content-wrapper p {
-    padding: 0 1em;
-    width: 100%;
-    font-size: 0.85em;
-    text-align: center;
-  }
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-}
-
-.flex-wrapper {
-  width: 100%;
-  height: 100%;
-}
-.flex-wrapper:nth-of-type(1) {
-  background-color: #ccccff;
-}
-.flex-wrapper:nth-of-type(2) {
-  background-color: #e7e7e7;
-}
-.flex-wrapper:nth-of-type(2) h3 {
-  font-size: 3em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-.flex-wrapper:nth-of-type(2) p {
-  color: var(--font-blk);
-}
-
-footer {
-  width: 100%;
-  height: auto;
-  position: relative;
-}
-
-.social-media {
-  height: auto;
-  width: 250px;
   display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  position: relative;
 }
 
-.social-media-cont {
-  cursor: pointer;
-  position: relative;
-  text-decoration: none;
-  color: #7fc0bb;
-}
-.social-media-cont .bi {
-  font-size: 1.2em;
-}
-.email-footer {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: row;
-  gap: 0 5em;
-  text-align: left;
-}
-@media screen and (max-width: 900px) {
-  .email-footer {
-    flex-direction: column;
-    gap: 2em 0;
-  }
+nav .links li {
+  list-style: none;
 }
 
-.email-area,
-.phone-area {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  gap: 0 0.5rem;
-  color: var(--font-blk);
+nav .links a {
+  display: block;
+  padding: 1em;
+  font-size: 16px;
   font-weight: 500;
+  color: rgb(88, 81, 81);
+  text-decoration: none;
 }
 
-.contact-area {
-  color: rgb(67, 105, 113);
+nav .links a:hover {
+  opacity: 0.7;
 }
-.contact-area h4 {
-  font-size: 1.1em;
+
+#nav-toggle {
+  position: absolute;
+  top: -100px;
+}
+
+nav .icon-burger {
+  display: none;
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+nav .icon-burger .line {
+  width: 30px;
+  height: 5px;
+  background-color: rgb(59, 59, 59);
+  margin: 5px;
+  border-radius: 3px;
+  transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 900px) {
+  nav .links {
+    float: none;
+    position: fixed;
+    z-index: 9;
+    left: 0;
+    right: 0;
+    top: 70px;
+    bottom: 100%;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: rgba(32, 32, 32, 0.962);
+    overflow: hidden;
+    box-sizing: border-box;
+    transition: all 0.5s ease-in-out;
+  }
+
+  nav .links a {
+    font-size: 20px;
+    color: rgb(212, 212, 212);
+  }
+
+  nav :checked ~ .links {
+    bottom: 0;
+  }
+
+  nav .icon-burger {
+    display: block;
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(1) {
+    transform: translateY(10px) rotate(225deg);
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(3) {
+    transform: translateY(-10px) rotate(-225deg);
+  }
+
+  nav :checked ~ .icon-burger .line:nth-child(2) {
+    opacity: 0;
+  }
+}
+footer {
+  height: auto;
+  background-color: #292f36;
 }
 
 .footer-wrapper {
-  width: 100%;
+  padding: 25px 100px;
+  background: rgb(255, 255, 255);
+}
+.footer-wrapper h1 {
+  font-size: 2.5rem;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 250px;
-  padding: 1em 2em;
-  background: linear-gradient(180deg, #c4e4e1 50%, #c4e4e1 100%);
-}
-.footer-wrapper h3 {
-  font-size: 2.5em;
-  font-weight: 600;
-  color: var(--font-blk);
-}
-.footer-wrapper p {
-  font-size: 1.1em;
-  line-height: 2;
-}
-.footer-wrapper h4 {
-  font-weight: 600;
-}
-@media screen and (max-width: 900px) {
-  .footer-wrapper {
-    gap: 1em 0;
-    padding: 1.5em 3em;
-    height: auto;
-  }
-  .footer-wrapper h3 {
-    font-size: 2em;
-  }
-  .footer-wrapper p {
-    width: 100%;
-    font-size: 0.9em;
-  }
 }
 
 .footer-ecell {
-  color: #7fc0bb;
-  width: 100%;
-  background-color: var(--font-blk);
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-evenly;
-  gap: 0.5em 0;
-  padding: 1rem 3rem;
-}
-.footer-ecell h5 {
-  text-transform: capitalize;
-  font-weight: 500;
-  font-size: 0.8em;
-}
-
-.register-btn {
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #55c9e3;
-  padding: 16px 32px;
-  border-radius: 0.7rem;
-  font-size: 1.2em;
-  cursor: pointer;
-}
-
-.register-btn:hover {
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #55c9e3;
-  padding: 16px 32px;
-  border-radius: 0.7rem;
-  font-size: 1.2em;
-}
-
-.hero-content {
-  display: flex;
-  flex-wrap: nowrap;
   flex-direction: column;
   justify-content: center;
-  z-index: 1;
-  height: 100%;
   align-items: center;
-  gap: 2em 0;
+}
+.footer-ecell a {
+  color: rgb(127, 192, 187);
+  font-size: 16px;
 }
 
-.content-area {
-  width: 75%;
-  height: 100%;
-  background-color: #fff;
-  border-radius: 0.7rem;
-  padding: 0 5rem;
-  overflow-y: hidden;
-}
-@media screen and (max-width: 900px) {
-  .content-area {
-    width: 100%;
-    padding: 0 1rem;
-  }
-}
-
-.registration-area {
-  width: 100%;
-  height: 100%;
-  background-color: pink;
-  overflow-y: auto;
-  margin-top: 60px;
-}
-
-.hero-img {
-  width: 450px;
-  height: 450px;
-}
-@media screen and (max-width: 900px) {
-  .hero-img {
-    width: 350px;
-    height: 450px;
-  }
-}
-
-.aims-wrapper {
-  width: 100%;
-  height: 65%;
-  gap: 0 2em;
+.social-media {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 50px;
 }
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px 60px;
+  flex-wrap: wrap;
+}
+
+.contact-card {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+}
+.contact-card h4 {
+  color: rgb(67, 105, 113);
+  font-size: 16px;
+  text-align: left;
+}
+
+.phone-area,
+.email-area {
+  display: flex;
+  flex-direction: row;
+  gap: 0 1em;
+}
+
+.footer-ecell {
+  text-align: center;
+  text-transform: capitalize;
+  color: rgb(127, 192, 187);
+  padding: 20px 16px;
+}
+.footer-ecell h5 {
+  font-weight: 500;
+}
+
 @media screen and (max-width: 900px) {
-  .aims-wrapper {
-    gap: 1em 0;
-    padding: 0 1em;
-    flex-wrap: wrap;
+  h1 {
+    font-size: 2.5rem;
+    color: var(--font-blk);
+  }
+
+  .footer-wrapper h1 {
+    color: var(--font-blk);
+    font-size: 2rem;
+  }
+
+  .contact-wrapper {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 550px) {
+  h1 {
+    font-size: 2.5rem;
+    color: var(--font-blk);
+  }
+
+  .footer-wrapper {
+    padding: 25px 10px;
+  }
+  .footer-wrapper h1 {
+    color: var(--font-blk);
+    font-size: 1.5rem;
+  }
+
+  .contact-wrapper {
+    justify-content: center;
+  }
+
+  .contact-card h4 {
+    font-size: 14px;
+  }
+
+  .footer-ecell h5 {
+    font-weight: 400;
+    font-size: 12px;
+  }
+}
+.about-section {
+  background-color: #eefafc;
+  padding: 5% 10em;
+  text-align: center;
+}
+.about-section h3 {
+  font-size: 2.5em;
+  font-weight: 600;
+}
+.about-section p {
+  font-size: 20px;
+  line-height: 2;
+}
+@media screen and (max-width: 800px) {
+  .about-section {
+    padding: 75px 1em;
+  }
+  .about-section h3 {
+    font-size: 1.5em;
+    font-weight: 600;
+  }
+  .about-section p {
+    font-size: 15px;
+    line-height: 1.5;
   }
 }
 
+.aims-section {
+  padding: 75px 0;
+  background-color: #f8fafd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 40px;
+}
+.aims-section h3 {
+  font-size: 2.5em;
+  font-weight: 600;
+}
+
+.aims-wrapper {
+  gap: 0 2em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 .cards {
-  border-radius: 12px;
-  width: auto;
-  height: auto;
+  width: 320px;
   gap: 1em 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-}
-@media screen and (max-width: 900px) {
-  .cards {
-    width: 100%;
-    gap: 0.5em 0;
-  }
 }
 
 .aims-img-cont {
   width: 95px;
-  border-radius: 10px;
-  margin-top: 10px;
-  position: relative;
-}
-@media screen and (max-width: 900px) {
-  .aims-img-cont {
-    margin-top: 0px;
-  }
 }
 
 .card-details {
-  margin-bottom: 25px;
+  text-align: center;
 }
 .card-details h4 {
-  text-align: center;
   font-size: 1.5em;
-  color: var(--font-blk);
 }
 .card-details p {
   color: rgba(41, 47, 54, 0.5);
   font-size: 0.9em;
-  text-align: center;
-}
-@media screen and (max-width: 750px) {
-  .card-details {
-    padding: 8px;
-  }
-}
-
-.card-details:nth-of-type(4) {
-  padding-left: -10px;
-}
-
-.sponsors-display {
-  width: 100%;
-  height: 65%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.sponsors-img {
-  height: 100%;
-  width: 250px;
-}
-
-.hero-section {
-  margin: auto;
-  width: 100%;
-  height: 100vh;
-  font-weight: 100;
-  background: radial-gradient(#294e58, #0f1613);
 }/*# sourceMappingURL=style.css.map */
