--- a/common/css/footer.css
+++ b/common/css/footer.css
@@ -37,7 +37,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   gap: 20px 60px;
   flex-wrap: wrap;
 }
@@ -75,10 +75,12 @@ footer {
     font-size: 2.5rem;
     color: var(--font-blk);
   }
+
   .footer-wrapper h1 {
     color: var(--font-blk);
     font-size: 2rem;
   }
+
   .contact-wrapper {
     justify-content: center;
   }
@@ -88,6 +90,7 @@ footer {
     font-size: 2.5rem;
     color: var(--font-blk);
   }
+
   .footer-wrapper {
     padding: 25px 10px;
   }
@@ -95,12 +98,15 @@ footer {
     color: var(--font-blk);
     font-size: 1.5rem;
   }
+
   .contact-wrapper {
     justify-content: center;
   }
+
   .contact-card h4 {
     font-size: 14px;
   }
+
   .footer-ecell h5 {
     font-weight: 400;
     font-size: 12px;
