--- a/common/css/footer.scss
+++ b/common/css/footer.scss
@@ -39,7 +39,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 20px 60px;
     flex-wrap: wrap;
   }
