--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -117,7 +117,6 @@ nav {
     border: none;
     top: 0;
   }
-
   .nav-header {
     padding: 5px 32px;
     display: flex;
@@ -129,18 +128,15 @@ nav {
     z-index: 3;
     height: auto;
   }
-
   .logo {
     height: 45px;
     width: 50px;
     padding: 0;
   }
-
   #nav-links {
     width: 100%;
     transition: var(--transition-nav);
   }
-
   .nav-links-active {
     width: 100%;
     visibility: visible;
@@ -148,14 +144,12 @@ nav {
     top: 0;
     z-index: 1;
   }
-
   .nav-links-disable {
     visibility: hidden;
     position: relative;
     top: -350px;
     z-index: 1;
   }
-
   .nav-toggle {
     display: flex;
     height: 25px;
@@ -182,7 +176,6 @@ nav {
   .nav-toggle span:nth-of-type(3) {
     width: 75%;
   }
-
   .toggle-active span:nth-of-type(1) {
     transform: rotateZ(-45deg) translate(-6.5px, 3.2px);
     transform-origin: top;
@@ -476,53 +469,42 @@ nav {
   .timeline-wrapper {
     height: 100%;
   }
-
   .timeline-wrapper .center-line {
     left: 0;
     height: 87.5%;
   }
-
   .timeline-wrapper .row-1 section {
     gap: 1em;
   }
-
   .timeline-wrapper .icons {
     top: 15px;
     left: -55px;
     width: 40px;
     height: 40px;
   }
-
   .icons-1 {
     border: 3px solid #ff7a7a;
   }
-
   .icons-2 {
     border: 3px solid #4ddc5e;
   }
-
   .icons-3 {
     border: 3px solid #31cce0;
   }
-
   .icons-4 {
     border: 3px solid #7a12f4;
   }
-
   .icons-5 {
     border: 3px solid #fb07d9;
   }
-
   .timeline-wrapper .row {
     margin: 20px 0 3px 40px;
   }
-
   .timeline-wrapper .row section {
     width: 100%;
     padding: 20px 20px;
     gap: 0.5em 0;
   }
-
   .row-1 section::before,
 .row-2 section::before,
 .row-3 section::before,
@@ -530,17 +512,14 @@ nav {
 .row-5 section::before {
     left: -7.5px;
   }
-
   .row section .details {
     display: flex;
     justify-content: space-between;
     text-transform: capitalize;
   }
-
   .row p {
     font-size: 0.75em;
   }
-
   .bottom a {
     text-transform: capitalize;
     text-decoration: none;
@@ -552,39 +531,98 @@ nav {
     font-size: 0.95em;
   }
 }
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 2.5%;
+  gap: 1em;
+  width: 100%;
+}
+@media screen and (max-width: 900px) {
+  .container {
+    gap: 0.7em;
+  }
+}
+
+.container-segment {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+@media screen and (max-width: 900px) {
+  .container-segment {
+    gap: 0.7em;
+  }
+}
+
+.segment {
+  display: flex;
+  gap: 0.7em;
+}
+
 .flip-card {
-  position: relative;
   display: inline-flex;
   flex-direction: column;
+  position: relative;
+  color: #ff7a7a;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 0.1em;
+}
+
+.segment-title {
+  font-size: 3vh;
+  text-align: left;
+  margin-bottom: 2.5%;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+@media screen and (max-width: 900px) {
+  .segment-title {
+    font-size: 16px;
+  }
 }
 
 .top,
 .bottom,
 .flip-card .top-flip,
 .flip-card .bottom-flip {
-  height: 0.75em;
+  font-size: 4vh;
   line-height: 1;
-  padding: 0.25em;
+  padding: 10px;
+  height: 3.3vh;
+  text-align: center;
   overflow: hidden;
+  width: 55px;
+}
+@media screen and (max-width: 900px) {
+  .top,
+.bottom,
+.flip-card .top-flip,
+.flip-card .bottom-flip {
+    font-size: 32px;
+    height: 0.82em;
+  }
 }
 
 .top,
 .flip-card .top-flip {
   background-color: #f7f7f7;
-  border-top-right-radius: 0.1em;
-  border-top-left-radius: 0.1em;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  border-bottom: 0.1px solid rgba(0, 0, 0, 0.05);
 }
 
 .bottom,
 .flip-card .bottom-flip {
-  background-color: white;
+  background-color: #fff;
   display: flex;
   align-items: flex-end;
-  border-bottom-right-radius: 0.1em;
-  border-bottom-left-radius: 0.1em;
+  justify-content: center;
+  border-bottom-left-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
 }
 
 .flip-card .top-flip {
@@ -613,6 +651,7 @@ nav {
   -webkit-animation: flip-bottom 250ms ease-out 250ms;
           animation: flip-bottom 250ms ease-out 250ms;
   transform-origin: top;
+  overflow: hidden;
   transform: rotateX(90deg);
 }
 
@@ -627,28 +666,63 @@ nav {
     transform: rotateX(0deg);
   }
 }
-.container {
-  display: flex;
-  gap: 0.5em;
-  justify-content: center;
-}
-
-.container-segment {
+.scroll-down {
+  width: 100%;
+  text-align: center;
+  margin-top: 7.5%;
   display: flex;
   flex-direction: column;
-  gap: 0.1em;
+  justify-content: center;
   align-items: center;
+  color: rgb(203, 203, 203);
+  font-weight: 400;
+  font-size: 1.1em;
+}
+.scroll-down a,
+.scroll-down a:visited {
+  color: rgb(203, 203, 203);
+}
+@media screen and (max-width: 900px) {
+  .scroll-down {
+    display: none;
+  }
 }
 
-.segment {
-  display: flex;
-  gap: 0.1em;
+.mouse {
+  margin-top: 4%;
+  width: 5vh;
+  height: 8vh;
+  border: 3px solid rgb(203, 203, 203);
+  border-radius: 60px;
+  position: relative;
+}
+.mouse::before {
+  content: "";
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgb(203, 203, 203);
+  border-radius: 50%;
+  opacity: 1;
+  animation: wheel 2s infinite;
+  -webkit-animation: wheel 2s infinite;
 }
 
-.segment-title {
-  font-size: 1rem;
+@keyframes wheel {
+  to {
+    opacity: 0;
+    top: 7.5vh;
+  }
 }
-
+@-webkit-keyframes wheel {
+  to {
+    opacity: 0;
+    top: 6.5vh;
+  }
+}
 :root {
   --background-color: #f7f7f7;
   --font-blk: #292f36;
@@ -682,7 +756,7 @@ section {
 section:nth-of-type(1) {
   height: 100vh;
   background-color: #fff;
-  background: linear-gradient(180deg, #e7e7e7, #ffffff);
+  background: linear-gradient(180deg, #e1e1e1, #ffffff);
 }
 
 section:nth-of-type(2) {
@@ -725,11 +799,11 @@ section:nth-of-type(5) {
 .counter-wrapper {
   height: auto;
   width: 100%;
-  margin-top: 7.5%;
+  margin-top: 1.5%;
   text-align: center;
 }
 .counter-wrapper h2 {
-  font-size: 3.2em;
+  font-size: 5vh;
 }
 .counter-wrapper h2 span {
   background-color: #f3ec78;
@@ -740,12 +814,18 @@ section:nth-of-type(5) {
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
 }
+@media screen and (max-width: 900px) {
+  .counter-wrapper {
+    width: 100vw;
+  }
+}
 
 .hero-img {
   width: 100%;
-  height: 350px;
+  height: 40vh;
   -o-object-fit: contain;
      object-fit: contain;
+  z-index: 1;
 }
 
 .incentives-wrapper {
@@ -761,13 +841,17 @@ section:nth-of-type(5) {
 }
 
 .cards {
-  height: 200px;
+  height: 275px;
   width: 325px;
 }
 
+.cards:nth-of-type(4) .card-img-cont {
+  width: 225px;
+}
+
 .card-img-cont {
-  height: 55px;
-  width: 55px;
+  height: 150px;
+  width: 150px;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -779,9 +863,15 @@ section:nth-of-type(5) {
   font-size: 1.2em;
 }
 .cards-details p {
+  margin-top: 2.5px;
   color: rgba(41, 47, 54, 0.5);
-  font-size: 0.9em;
+  font-size: 1em;
   text-align: justify;
+}
+@media screen and (max-width: 900px) {
+  .cards-details {
+    font-size: 0.9em;
+  }
 }
 
 footer {
@@ -833,7 +923,7 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 2.25%;
   margin-left: 7.5%;
 }
@@ -874,34 +964,29 @@ footer {
     font-size: 2.1rem;
     color: var(--font-blk);
   }
-
   section {
     width: 100%;
     padding: 65px 32px;
   }
-
   section:nth-of-type(2) p {
     margin-top: 5%;
     font-size: 15px;
     text-align: justify;
   }
-
   .cards {
     width: 100%;
+    height: 300px;
   }
-
   section:nth-of-type(3) {
-    height: calc(100vh + 20%);
+    height: calc(100vh + 50%);
   }
   section:nth-of-type(3) h1 {
     padding: 0px 32px;
     padding-top: 65px;
   }
-
   section:nth-of-type(5) {
     height: auto;
   }
-
   .incentives-wrapper {
     width: 100%;
     display: flex;
@@ -909,13 +994,13 @@ footer {
     align-items: baseline;
     padding: 0 32px;
   }
-
   .hero-img {
     height: 350px;
-    width: 350px;
+    width: 100%;
     z-index: 1;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
-
   .footer-wrapper {
     height: calc(60vh - 10%);
     padding: 25px 32px;
@@ -924,15 +1009,12 @@ footer {
     color: var(--font-blk);
     font-size: 2rem;
   }
-
   .footer-ecell {
     height: calc(10vh - 2.5%);
   }
-
   .footer-wrapper {
     text-align: center;
   }
-
   .contact-wrapper {
     flex-direction: row;
     justify-content: space-evenly;
@@ -944,7 +1026,6 @@ footer {
     margin-top: 2.5%;
     margin-left: 5%;
   }
-
   .contact-card {
     width: 350px;
     height: auto;
@@ -954,7 +1035,6 @@ footer {
     color: rgb(67, 105, 113);
     font-size: 1.01em;
   }
-
   .incentives-wrapper {
     width: 100%;
     flex-direction: column;
@@ -962,12 +1042,10 @@ footer {
     gap: 0;
     margin-top: 60px;
   }
-
   .card-img-cont {
-    height: 40px;
-    width: 40px;
+    height: 150px;
+    width: 150px;
   }
-
   .social-media {
     width: 100%;
   }
@@ -975,36 +1053,33 @@ footer {
 @media screen and (min-width: 395px) and (max-width: 501px) {
   .hero-img {
     height: 275px;
-    width: 275px;
+    width: 100%;
     z-index: 1;
   }
-
   h1 {
     font-size: 2.3rem;
     color: var(--font-blk);
   }
-
+  .cards {
+    width: 100%;
+    height: 325px;
+  }
   .nav-header {
     padding: 2.5px 16px;
   }
-
   section:nth-of-type(2) {
     height: calc(55vh + 10%);
   }
-
   section:nth-of-type(3) {
     height: calc(105vh + 12.5%);
   }
-
   .footer-wrapper {
     padding: 25px 16px;
     height: calc(55vh + 10%);
   }
-
   .social-media {
     width: 100%;
   }
-
   .footer-ecell {
     height: calc(12vh - 10%);
     width: 100%;
@@ -1015,42 +1090,37 @@ footer {
     font-size: 2.3rem;
     color: var(--font-blk);
   }
-
+  .cards {
+    width: 100%;
+    height: 325px;
+  }
   .nav-header {
     padding: 2.5px 16px;
   }
-
   section:nth-of-type(2) {
     height: calc(70vh + 7.5%);
   }
-
   section:nth-of-type(3) {
-    height: calc(120vh + 7.5%);
+    height: calc(130vh + 7.5%);
   }
-
   .hero-img {
     height: 250px;
-    width: 250px;
+    width: 100%;
     z-index: 1;
   }
-
   section:nth-of-type(5) {
     height: auto;
   }
-
   .social-media {
     width: 100%;
   }
-
   footer {
     height: auto;
   }
-
   .footer-wrapper {
     padding: 25px 16px;
     height: auto;
   }
-
   .footer-ecell {
     height: calc(22vh - 10%);
   }
