--- a/events/css/style.scss
+++ b/events/css/style.scss
@@ -23,7 +23,8 @@ $color_grey_dark: #a2a2a2;
   }
   &:hover {
     .photo {
-      transform: scale(1.3) rotate(3deg);
+      filter: grayscale(0%);
+      transition: 500ms;
     }
   }
   .meta {
@@ -32,6 +33,7 @@ $color_grey_dark: #a2a2a2;
     height: 200px;
   }
   .photo {
+    filter: grayscale(100%);
     position: absolute;
     top: 0;
     right: 0;
