--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,7 +1,10 @@
 .about-section{
 background-color: #eefafc;
-padding: 5% 10em;
+padding: 75px 10em;
 text-align: center;
+display: flex;
+flex-direction: column;
+gap: 40px;
 
 h3{
     font-size: 2.5em;
@@ -29,7 +32,7 @@ p{
 
 }
 
-.aims-section{
+.objective-section{
     padding: 75px 0;
     background-color: #f8fafd;
     display: flex;
@@ -47,7 +50,7 @@ p{
 }
 
 
-.aims-wrapper {
+.objective-wrapper {
     gap: 0 2em;
     display: flex;
     flex-direction: row;
@@ -63,7 +66,7 @@ p{
     justify-content: flex-start;
     align-items: center;
 }
-.aims-img-cont {
+.objective-img-cont {
     width: 95px;
 }
 
