events page podcast links added

--- a/events/css/style.scss
+++ b/events/css/style.scss
@@ -3,6 +3,16 @@ $color_prime: #5ad67d;
 $color_grey: #e2e2e2;
 $color_grey_dark: #a2a2a2;
 
+
+.podcast-links{
+display: flex;
+gap: 50px;
+
+.podcast-icons{
+  width: 40px;
+}
+
+}
 .blog-card {
   display: flex;
   flex-direction: column;
