--- a/events/css/style.css
+++ b/events/css/style.css
@@ -1,3 +1,11 @@
+.podcast-links {
+  display: flex;
+  gap: 50px;
+}
+.podcast-links .podcast-icons {
+  width: 40px;
+}
+
 .blog-card {
   display: flex;
   flex-direction: column;
