--- a/projectpillar/src/css/_countdown.scss
+++ b/projectpillar/src/css/_countdown.scss
@@ -3,12 +3,27 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap;
-  margin-top: 2.5%;
-  gap: 1em;
+  flex-wrap: nowrap;
+  margin-top: 2%;
+  gap: 2em;
   width: 100%;
+
+  @media screen and (max-width: 1100px) {
+    padding: 0px 32px;
+  }
+
+  @media screen and (max-width: 501px) {
+    padding: 0px 8px;
+  }
+
   @media screen and (max-width: 900px) {
-    gap: 0.7em;
+    gap: 1em;
+  }
+  @media screen and (max-width: 365px) {
+    transform: scale(0.85);
+  }
+  @media screen and (min-width: 1000px) and (max-height: 775px) {
+    transform: scale(0.65);
   }
 }
 
@@ -25,6 +40,9 @@
 .segment {
   display: flex;
   gap: 0.7em;
+  @media screen and (max-width: 425px) {
+    gap: 0.3em;
+  }
 }
 
 .flip-card {
@@ -50,16 +68,20 @@
 .bottom,
 .flip-card .top-flip,
 .flip-card .bottom-flip {
-  font-size: 4vh;
+  font-size: 48px;
   line-height: 1;
   padding: 10px;
-  height: 3.3vh;
+  height: 0.715em;
   text-align: center;
   overflow: hidden;
   width: 55px;
   @media screen and (max-width: 900px) {
     font-size: 32px;
     height: 0.82em;
+  }
+  @media screen and (max-width: 425px) {
+    font-size: 20px;
+    width: 35px;
   }
 }
 
