--- a/projectpillar/src/css/_scrollDownArrow.scss
+++ b/projectpillar/src/css/_scrollDownArrow.scss
@@ -1,7 +1,7 @@
 .scroll-down {
   width: 100%;
   text-align: center;
-  margin-top: 7.5%;
+  margin-top: 4%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,22 +13,19 @@
   a:visited {
     color: rgb(203, 203, 203);
   }
-  @media screen and (max-width: 900px) {
-    display: none;
-  }
 }
 
 .mouse {
   margin-top: 4%;
-  width: 5vh;
-  height: 8vh;
-  border: 3px solid rgb(203, 203, 203);
+  width: 40px;
+  height: 65px;
+  border: 2px solid rgb(203, 203, 203);
   border-radius: 60px;
   position: relative;
   &::before {
     content: "";
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     position: absolute;
     top: 10px;
     left: 50%;
@@ -39,18 +36,25 @@
     animation: wheel 2s infinite;
     -webkit-animation: wheel 2s infinite;
   }
+  @media screen and (max-width: 768px) {
+    transform: scale(0.75);
+  }
+
+  @media screen and (min-width: 1000px) and (max-height: 775px) {
+    transform: scale(0.75);
+  }
 }
 
 @keyframes wheel {
   to {
     opacity: 0;
-    top: 7.5vh;
+    top: 50px;
   }
 }
 
 @-webkit-keyframes wheel {
   to {
     opacity: 0;
-    top: 6.5vh;
+    top: 50px;
   }
 }
