--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -82,7 +82,7 @@ section:nth-of-type(5) {
 .counter-wrapper {
   height: auto;
   width: 100%;
-  margin-top: 1.5%;
+  margin-top: 1%;
   // background-color: pink;
   text-align: center;
   h2 {
@@ -103,6 +103,9 @@ section:nth-of-type(5) {
       -webkit-text-fill-color: transparent;
       -moz-text-fill-color: transparent;
     }
+  }
+  @media screen and (min-width: 901px) and (max-width: 1100px) {
+    width: 75vw;
   }
   @media screen and (max-width: 900px) {
     width: 100vw;
@@ -159,7 +162,7 @@ section:nth-of-type(5) {
     text-align: justify;
   }
   @media screen and (max-width: 900px) {
-    font-size: .9em;
+    font-size: 0.9em;
   }
 }
 
@@ -271,7 +274,7 @@ footer {
     }
   }
   .cards {
-    width: 100%;
+    width: 300px;
     height: 300px;
   }
 
@@ -291,10 +294,11 @@ footer {
     //   background-color: #bfddff;
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: baseline;
-
+    flex-wrap: wrap;
     padding: 0 32px;
+    padding-bottom: 50px;
   }
 
   .hero-img {
@@ -344,9 +348,6 @@ footer {
   }
 
   .incentives-wrapper {
-    width: 100%;
-    flex-direction: column;
-    flex-wrap: wrap;
     gap: 0;
     margin-top: 60px;
   }
